# TaurusGCS

./: .gitignore  CMakeLists.txt  Qml.qrc  Resources.qrc
src/: Main.qml  TaurusGCS.cpp  TaurusGCS.h  main.cpp
src/Core/: CMakeLists.txt  Drone.cpp  Drone.h  Swarm.cpp  SwarmManager.cpp  SwarmManager.h  Telemetry.cpp  Telemetry.h  connection.cpp  connection.hpp
src/FlightMap/: CMakeLists.txt  ConnectionLinkChooser.qml  FlightMap.qml  LinkButton.qml  StatusBar.qml  Toolbox.qml  Tray.qml  TrayMenu.qml
